src/objects/Rest_Log__c.object
<CustomObject>
    <description>Holds the log records for all REST API calls.</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Holds the endpoint of the log</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Holds the error code</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Holds the error message</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>Holds the body of the request</description>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <description>Holds the response of the rest callout</description>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Holds the stack trace</description>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Holds the status of the log</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>REST Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Endpoint__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RL-{00000}</displayFormat>
        <label>Rest Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rest Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>